Create variable for prefix

--- a/meson.build
+++ b/meson.build
@@ -9,8 +9,9 @@ project(
 subdir('meson')
 add_project_arguments(HARDEN_CXX_OPTIONS, language: 'cpp')
 
-data_dir = get_option('prefix') / get_option('datadir') / meson.project_name()
-config_dir = get_option('prefix') / get_option('sysconfdir') / meson.project_name()
+prefix = get_option('prefix')
+data_dir = prefix / get_option('datadir') / meson.project_name()
+config_dir = prefix / get_option('sysconfdir') / meson.project_name()
 
 subdir('src')
 
