Rename config files

--- a/meson.build
+++ b/meson.build
@@ -15,5 +15,10 @@ config_dir = prefix / get_option('sysconfdir') / meson.project_name()
 
 subdir('src')
 
-install_data(['drogon_config.json', 'MotionDetection.json'], install_dir: config_dir)
+install_data(
+  [
+    'app.json',
+    'drogon.json',
+  ],
+  install_dir: config_dir)
 install_subdir('front', install_dir: data_dir)
