--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     "audio_bitrate": "128k"
   },
   "logging": {
-    "log_level": "warn"
+    "log_level": "info"
   },
   "background_subtractor": {
     "algorithm": "MOG2",
