Reorganize ini library

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project(
   'MotionDetection',
   ['cpp'],
-  default_options: ['cpp_std=c++17'],
+  default_options: ['cpp_std=c++17', 'default_library=static'],
   license: 'ISC',
   meson_version: '>=0.61'
 )
@@ -13,14 +13,11 @@ prefix = get_option('prefix')
 data_dir = prefix / get_option('datadir') / meson.project_name()
 config_dir = prefix / get_option('sysconfdir') / meson.project_name()
 
-ini_proj = subproject('ini', default_options: ['default_library=static'])
-ini_dep = ini_proj.get_variable('ini_dep')
-
 subdir('src')
 
 install_data(
   [
-    'app.json',
+    'app.ini',
     'drogon.json',
   ],
   install_dir: config_dir)
