--- a/app.ini
+++ b/app.ini
@@ -97,10 +97,14 @@ min_moving_area = 500
 delta_without_motion = 5.0
 
 ; [preprocess] section is optional.
+; - convert_to_gray - optional bool. Default is false. When true converts 3-channel
+; input images to 1 channel. Use it to improve speed of the background_subtractor
+; algorithm.
 ; - resize_factor - optional positive double. If present it resizes input images by
 ; specified factor in each direction before passing them to the smoothing filter
 ; below (if any). Use it to improve speed of the background_subtractor algorithm.
 [preprocess]
+convert_to_gray = true
 resize_factor = 0.5
 
 ; [preprocess.smoothing] section is optional. It applies smmothing filter after
