Move recorded video to tmp

--- a/app.ini
+++ b/app.ini
@@ -39,7 +39,7 @@ input_format = mjpeg
 ; - audio_bitrate - optional bitrate of an output audio streams. Has the same meaning
 ; as '-b:a' option in ffmpeg.
 [output_files]
-prefix = videos
+prefix = /tmp/videos
 extension = .mp4
 video_bitrate = 10M
 audio_bitrate = 128K
