Use ffmpeg info level for av_dump_format

--- a/app.ini
+++ b/app.ini
@@ -49,7 +49,7 @@ audio_bitrate = 128K
 ; info, warning, error, fatal}. Defaults are info and warning respectively.
 [logging]
 app_level = info
-ffmpeg_level = warning
+ffmpeg_level = info
 
 ; [segmentation.background_subtractor] section is required and specifies background
 ; segmentation algorithm and its parameters:
