Add show_timestamp  option

--- a/app.ini
+++ b/app.ini
@@ -50,6 +50,7 @@ audio_bitrate = 128K
 [logging]
 app_level = info
 ffmpeg_level = info
+show_timestamp = true
 
 ; [segmentation.background_subtractor] section is required and specifies background
 ; segmentation algorithm and its parameters:
