Add show_timestamp description

--- a/app.ini
+++ b/app.ini
@@ -45,8 +45,10 @@ video_bitrate = 10M
 audio_bitrate = 128K
 
 ; [logging] section is optional:
-; app_level, ffmpeg_level - optional strings. Can be one of {trace, debug,
+; - app_level, ffmpeg_level - optional strings. Can be one of {trace, debug,
 ; info, warning, error, fatal}. Defaults are info and warning respectively.
+; - show_timestamp - optional bool. Default is true. Use it to hide timestamps from
+; log messages.
 [logging]
 app_level = info
 ffmpeg_level = info
