--- a/app.ini
+++ b/app.ini
@@ -23,13 +23,16 @@ video_size = 1280x720
 framerate = 30
 input_format = mjpeg
 
+; Alternative with rtsp stream:
+# [video_capture]
+# filename = rtsp://localhost:5000/
+
 ; [output_files] section is required and contains output video files settings:
 ; - prefix - required path to a folder where to put recorded video files with motion.
 ; Can be empty. In this case current working dir will be used. Date subfolder will be
 ; created inside the prefix folder with the ISO 8601 format "%Y-%m-%d". Output files
-; will be created inside the date subfolder with a name in local format "%H.%M.%S" +
-; extension. For the time format details see doc for time_fmt manipulator
-; https://www.boost.org/doc/libs/1_81_0/doc/html/chrono/reference.html#chrono.reference.io.ios_state_hpp.sag.set_time_fmt
+; will be created inside the date subfolder with a name in local format "%H.%M.%s"
+; with fractional seconds + extension. For example: 2023-07-26/18.16.25.876914.mp4
 ; - extension - required format of generated files. Video files are always recorded
 ; with H264 video codec (max_b_frames = 2, gop_size = input_fps / 2, preset =
 ; ultrafast, tune = zerolatency, closed gop) and AAC audio codec;
