Add option for conan boost naming

--- a/src/ini/src/meson.build
+++ b/src/ini/src/meson.build
@@ -1,4 +1,9 @@
-boost_deps = dependency('boost-headers', include_type: 'system')
+if get_option('use_conan_boost')
+  boost_deps = dependency('boost-headers', include_type: 'system')
+else
+  boost_deps = dependency('boost', include_type: 'system')
+endif
+
 lib_ini = library(
   'ini',
   [
