--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,3 +4,9 @@ option(
   value: false,
   description: 'Build unit tests'
 )
+option(
+  'use_conan_boost',
+  type: 'boolean',
+  value: false,
+  description: 'Use conan compatible boost modules naming style'
+)
