Reorganize deps; add option to build drogon from subproject

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -10,3 +10,9 @@ option(
   value: false,
   description: 'Use conan compatible boost modules naming style'
 )
+option(
+  'use_subproj_drogon',
+  type: 'boolean',
+  value: false,
+  description: 'Build drogon as subproject'
+)
