Use map to store arbitrary demuxer options

--- a/app.ini
+++ b/app.ini
@@ -5,20 +5,17 @@
 ; https://ffmpeg.org/ffmpeg.html#Video-and-Audio-file-format-conversion
 ; - file_format - optional input file format. Has the same meaning as '-f' option in
 ; ffmpeg program https://ffmpeg.org/ffmpeg.html#Main-options
-; For the list of supported devices and protocols see
-; https://ffmpeg.org/ffplay-all.html
-; - video_size - optional private option for some demuxers. See description for '-s'
-; option for ffmpeg program https://ffmpeg.org/ffmpeg.html#Video-Options
-; - framerate - optional private option for some demuxers. For the syntax see
-; https://ffmpeg.org/ffmpeg.html#Video-Options
-; - input_format - optional private option for some demuxers. Sets preferred pixel
-; format. For example see https://ffmpeg.org/ffmpeg-all.html#video4linux2_002c-v4l2
-;
-; For the list of supported formats run 'ffmpeg -hide_banner -f v4l2 -list_formats
-; all -i /dev/videoN'
+; For the list of supported devices, protocols and their options see `man
+; ffmpeg-devices`, ffmpeg-formats and ffmpeg-protocols.
 [video_capture]
 filename = /dev/video0
 file_format = v4l2
+
+; [video_capture.demuxer_options] is optional section and contains demuxer specific
+; options.
+; For the list of supported webcam options run 'ffmpeg -hide_banner -f v4l2 -list_formats
+; all -i /dev/videoN'
+[video_capture.demuxer_options]
 video_size = 1280x720
 framerate = 30
 input_format = mjpeg
@@ -26,6 +23,8 @@ input_format = mjpeg
 ; Alternative with rtsp stream:
 # [video_capture]
 # filename = rtsp://localhost:5000/
+# [video_capture.demuxer_options]
+# rtsp_transport = tcp
 
 ; [output_files] section is required and contains output video files settings:
 ; - prefix - required path to a folder where to put recorded video files with motion.
