Add hardware decoder support

--- a/app.ini
+++ b/app.ini
@@ -20,6 +20,14 @@ video_size = 1280x720
 framerate = 30
 input_format = mjpeg
 
+; [video_capture.video_decoder] is optional section with video decoder specific
+; parameters.
+; - hw_type - is optional string with hardware acceleration method. For the list of
+; available methods see `ffmpeg -hide_banner -hwaccels` and AVHWDeviceType enum doc
+; https://ffmpeg.org/doxygen/trunk/hwcontext_8h.html#acf25724be4b066a51ad86aa9214b0d34
+[video_capture.video_decoder]
+hw_type = vaapi
+
 ; Alternative with rtsp stream:
 # [video_capture]
 # filename = rtsp://localhost:5000/
