Add hardware encoder support

--- a/app.ini
+++ b/app.ini
@@ -54,6 +54,18 @@ extension = .mp4
 video_bitrate = 10M
 audio_bitrate = 128K
 
+[output_files.video_encoder]
+; codec_name = h264_vaapi
+; hw_type = vaapi
+
+[output_files.video_encoder]
+codec_name = libx264
+
+; See `ffmpeg -h encoder=h264` and `x264 -h`.
+[output_files.video_encoder.private_options]
+preset = ultrafast
+tune = zerolatency
+
 ; [logging] section is optional:
 ; - app_level, ffmpeg_level - optional strings. Can be one of {trace, debug,
 ; info, warning, error, fatal}. Defaults are info and warning respectively.
