Add video_encoder description

--- a/app.ini
+++ b/app.ini
@@ -20,6 +20,12 @@ video_size = 1280x720
 framerate = 30
 input_format = mjpeg
 
+; Example with rtsp stream:
+# [video_capture]
+# filename = rtsp://localhost:5000/
+# [video_capture.demuxer_options]
+# rtsp_transport = tcp
+
 ; [video_capture.video_decoder] is optional section with video decoder specific
 ; parameters.
 ; - hw_type - is optional string with hardware acceleration method. For the list of
@@ -27,12 +33,6 @@ input_format = mjpeg
 ; https://ffmpeg.org/doxygen/trunk/hwcontext_8h.html#acf25724be4b066a51ad86aa9214b0d34
 [video_capture.video_decoder]
 hw_type = vaapi
-
-; Alternative with rtsp stream:
-# [video_capture]
-# filename = rtsp://localhost:5000/
-# [video_capture.demuxer_options]
-# rtsp_transport = tcp
 
 ; [output_files] section is required and contains output video files settings:
 ; - prefix - required path to a folder where to put recorded video files with motion.
@@ -54,17 +54,31 @@ extension = .mp4
 video_bitrate = 10M
 audio_bitrate = 128K
 
+; [output_files.video_encoder] is optional section with video encoder settings.
+; - codec_name - is optional string with encoder name. For the list of supported
+; encoders run `ffmpeg -hide_banner -encoders`. Default is 'libx264'.
+; - hw_type - is optional string with hardware acceleration method.
+# Example with vaapi:
 [output_files.video_encoder]
-; codec_name = h264_vaapi
-; hw_type = vaapi
+codec_name = h264_vaapi
+hw_type = vaapi
 
-[output_files.video_encoder]
-codec_name = libx264
+# Example with cuda:
+# [output_files.video_encoder]
+# codec_name = h264_nvenc
+# hw_type = cuda
 
-; See `ffmpeg -h encoder=h264` and `x264 -h`.
-[output_files.video_encoder.private_options]
-preset = ultrafast
-tune = zerolatency
+# Example with software libx264:
+# [output_files.video_encoder]
+# codec_name = libx264
+
+; [output_files.video_encoder.private_options] is optional section with private
+; options for the chosen encoder. See `man ffmpeg-codecs` and `ffmpeg -h
+; encoder=h264` and `x264 -h`.
+# Example options for libx264:
+# [output_files.video_encoder.private_options]
+# preset = ultrafast
+# tune = zerolatency
 
 ; [logging] section is optional:
 ; - app_level, ffmpeg_level - optional strings. Can be one of {trace, debug,
