--- a/app.ini
+++ b/app.ini
@@ -40,9 +40,10 @@ hw_type = vaapi
 ; created inside the prefix folder with the ISO 8601 format "%Y-%m-%d". Output files
 ; will be created inside the date subfolder with a name in local format "%H.%M.%s"
 ; with fractional seconds + extension. For example: 2023-07-26/18.16.25.876914.mp4
-; - extension - required format of generated files. Video files are always recorded
-; with H264 video codec (max_b_frames = 2, gop_size = input_fps / 2, preset =
-; ultrafast, tune = zerolatency, closed gop) and AAC audio codec;
+; - extension - required format of generated files. Video files are recorded with
+; codec specified in [output_files.video_encoder] section with max_b_frames = 2,
+; gop_size = input_fps / 2, preset = ultrafast, tune = zerolatency, closed gop and
+; AAC audio codec;
 ; - video_bitrate - optional bitrate of a recorded video stream. Can accept either
 ; numerical value or string representation as '-b:v' option in ffmpeg. See
 ; https://ffmpeg.org/ffmpeg.html#Options
