Use mkv container by default

--- a/app.ini
+++ b/app.ini
@@ -51,7 +51,7 @@ hw_type = vaapi
 ; as '-b:a' option in ffmpeg.
 [output_files]
 prefix = /tmp/videos
-extension = .mp4
+extension = .mkv
 video_bitrate = 10M
 audio_bitrate = 128K
 
