Dont hardcode GOP options

--- a/app.ini
+++ b/app.ini
@@ -41,9 +41,7 @@ hw_type = vaapi
 ; will be created inside the date subfolder with a name in local format "%H.%M.%s"
 ; with fractional seconds + extension. For example: 2023-07-26/18.16.25.876914.mp4
 ; - extension - required format of generated files. Video files are recorded with
-; codec specified in [output_files.video_encoder] section with max_b_frames = 2,
-; gop_size = input_fps / 2, preset = ultrafast, tune = zerolatency, closed gop and
-; AAC audio codec;
+; codec specified in [output_files.video_encoder] section and AAC audio codec;
 ; - video_bitrate - optional bitrate of a recorded video stream. Can accept either
 ; numerical value or string representation as '-b:v' option in ffmpeg. See
 ; https://ffmpeg.org/ffmpeg.html#Options
@@ -60,9 +58,9 @@ audio_bitrate = 128K
 ; encoders run `ffmpeg -hide_banner -encoders`. Default is 'libx264'.
 ; - hw_type - is optional string with hardware acceleration method.
 # Example with vaapi:
-[output_files.video_encoder]
-codec_name = h264_vaapi
-hw_type = vaapi
+#[output_files.video_encoder]
+#codec_name = h264_vaapi
+#hw_type = vaapi
 
 # Example with cuda:
 # [output_files.video_encoder]
@@ -70,16 +68,23 @@ hw_type = vaapi
 # hw_type = cuda
 
 # Example with software libx264:
-# [output_files.video_encoder]
-# codec_name = libx264
+[output_files.video_encoder]
+codec_name = libx264
 
 ; [output_files.video_encoder.private_options] is optional section with private
 ; options for the chosen encoder. See `man ffmpeg-codecs` and `ffmpeg -h
 ; encoder=h264` and `x264 -h`.
 # Example options for libx264:
-# [output_files.video_encoder.private_options]
-# preset = ultrafast
-# tune = zerolatency
+[output_files.video_encoder.private_options]
+preset = ultrafast
+tune = zerolatency
+; https://support.google.com/youtube/answer/1722171?hl=en
+; Max consecutive B frames
+bf = 2
+; GOP size
+g = 15
+; Closed GOP
+flags = +cgop
 
 ; [logging] section is optional:
 ; - app_level, ffmpeg_level - optional strings. Can be one of {trace, debug,
